GOEDE JAVASCRIPT GEDAAN

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="inlogscherm.html"> <img class="eentje" id="profile" src="Assets/melding.png" alt="profilebutton">
-                    </a>
+                    <img id="eentje" src="Assets/melding.png" alt="notification">
                 </li>
 
                 <li>
@@ -87,9 +86,9 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img src="Assets/hearticon.png" alt="hearticon">
 
-                    <img class="add" src="Assets/plusicon.png" alt="addicon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
