HET EENTJE WERKT HALLELUJAH

--- a/vrienden.html
+++ b/vrienden.html
@@ -24,8 +24,7 @@
                     </a>
                 </li>
                 <li>
-                      <a href="inlogscherm.html"> <img class="eentje" id="profile" src="Assets/melding.png" alt="profilebutton">
-                    </a>
+                      <img id="eentje" src="Assets/melding.png" alt="notification">
                 </li>
 
                 <li>
