--- a/artikelkinderboek.html
+++ b/artikelkinderboek.html
@@ -26,8 +26,7 @@
                 </li>
 
                 <li>
-                   <a href="inlogscherm.html"> <img class="eentje" id="profile" src="Assets/melding.png" alt="profilebutton">
-                    </a>
+                   <img id="eentje" src="Assets/melding.png" alt="notification">
                 </li>
 
                 <li>
