proberen 2de micro interactie

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <footer>
                     <p>23 keer leuk gevonden</p>
                     <img src="Assets/hearticon.png" alt="hearticon">
-
+                    <img id="hartje" src="Assets/hearticonred.png" alt="hearticon">
                     <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
@@ -103,6 +103,7 @@
                 <footer>
                     <p>44 keer leuk gevonden</p>
                     <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+
                     <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
