--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
             </article>
         </section>
     </main>
-    <script src="js/index.js"></script>
+    <!-- <script src="js/index.js"></script>-->
+    <script src="js/hart.js"></script>
 </body>
 
 </html>
