kleine veranderingen,lukt niet helemaal

--- a/vrienden.html
+++ b/vrienden.html
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li>
-                      <img id="eentje" src="Assets/melding.png" alt="notification">
+                    <img id="eentje" src="Assets/melding.png" alt="notification">
                 </li>
 
                 <li>
@@ -107,7 +107,7 @@
 
 
                 <footer>
-                    <p>11 keer leuk gevonden</p>
+                    <p id="gevonden">11 keer leuk gevonden</p>
                     <img id="heart" src="Assets/hearticon.png" alt="hearticon">
                     <img id="add" src="Assets/plusicon.png" alt="addicon">
 
@@ -116,3 +116,9 @@
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
 
             </article>
+        </section>
+    </main>
+    <script src="js/index.js"></script>
+</body>
+
+</html>
