--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <img src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartje" src="Assets/hearticonred.png" alt="hearticon">
+                    <img id="hartje" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="roodje" src="Assets/hearticonred.png" alt="hearticon">
                     <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
@@ -199,7 +199,7 @@
             </article>
         </section>
     </main>
-    <!-- <script src="js/index.js"></script>-->
+    <script src="js/index.js"></script>
     <script src="js/hart.js"></script>
 </body>
 
