gelukt met tweede micro interactie!!!

--- a/oefen.html
+++ b/oefen.html
@@ -86,8 +86,8 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/hearticon.png" alt="hearticon">
+                    <i class="fa fa-heart" aria-hidden="true" id="heart"></i>
                     <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
@@ -101,10 +101,10 @@
 
 
                 <footer>
-                    <p>23 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <p>44 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -116,10 +116,9 @@
                 <p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk: ‘Centraal Station, eindhalte’. Het sissende geluid van busdeuren die open gaan. Mensen drommen naar buiten. Voorzichtig vind ik mijn weg naar de uitgang en stap uit.</p>
 
                 <footer>
-                    <p>23 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <p>12 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -131,10 +130,9 @@
                 <p>Kijk, daar gaat Max. Dag Max! Hij stapt uit de bus. Wat duwt hij daar vooruit? Jawel, een heuse kinderwagen! En wat voor één! Een groene! Zijn zoontje ligt er in te slapen. Die heeft gelukkig geen last van de kou. Want het is koud joh! Het regent een beetje en het waait flink. Alle...</p>
 
                 <footer>
-                    <p>23 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <p>3 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -146,10 +144,9 @@
 
 
                 <footer>
-                    <p>23 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <p>11 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -162,10 +159,9 @@
 
 
                 <footer>
-                    <p>23 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <p>54 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -179,10 +175,9 @@
                 <p>Le premier fevrièr 2011. Presque midi. Le bus s’arrête. Ligne 21. Place de Gare Centrale. Je marche au derrière d’un poussette. Mon fils dort. Je suis en route au Bibliothèque Public pour emprunteur Exercices de Style de Raymond Queneau. C’est un livre très dificile d’acquérir. Mais zut alors, quelle ravage ici! Il y a beaucoup</p>
 
                 <footer>
-                    <p>23 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <p>19 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -194,10 +189,9 @@
                 <p>De bus uit. Mijn zoon tukt in zijn kinderkoets. Eindelijk. Ik loop over het plein. Een gierende wind en een striemende miezerregen geselen mijn gezicht. De mensen kijken voor zich uit, ieder voor zich. Ik ben op weg richting de bibliotheek om Stijloefeningen te lenen van hoe heet die schijver, iets met een Q. Welk ...</p>
 
                 <footer>
-                    <p>23 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <p>2 keer leuk gevonden</p>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -206,7 +200,7 @@
         </section>
     </main>
     <script src="js/index.js"></script>
-
+    <script src="js/hart.js"></script>
 </body>
 
 </html>
