--- a/meestelikes.html
+++ b/meestelikes.html
@@ -39,7 +39,7 @@
                 <h1>NS Verhalen voor onderweg</h1>
             </a>
 
-             <form action="/">
+            <form action="/">
                 <input type="text" id="searching" alt="searchbar">
                 <button>Ga ></button>
             </form>
@@ -61,7 +61,7 @@
             </ul>
             <ul id="vrienden">
                 <li>
-                   <a href="vrienden.html">Mijn vrienden</a>
+                    <a href="vrienden.html">Mijn vrienden</a>
                 </li>
             </ul>
         </nav>
@@ -86,8 +86,9 @@
 
                 <footer>
                     <p>54 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -101,8 +102,9 @@
 
                 <footer>
                     <p>44 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -117,10 +119,9 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-
-                    <img class="add" src="Assets/plusicon.png" alt="addicon">
-
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -133,8 +134,9 @@
 
                 <footer>
                     <p>19 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -147,8 +149,9 @@
 
                 <footer>
                     <p>12 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -162,8 +165,9 @@
 
                 <footer>
                     <p>11 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -176,8 +180,9 @@
 
                 <footer>
                     <p>3 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -191,8 +196,9 @@
 
                 <footer>
                     <p>2 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
