--- a/minstelikes.html
+++ b/minstelikes.html
@@ -83,8 +83,10 @@
 
                 <footer>
                     <p>2 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
+
 
                 </footer>
 
@@ -97,8 +99,9 @@
 
                 <footer>
                     <p>3 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -111,8 +114,9 @@
 
                 <footer>
                     <p>11 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -125,8 +129,9 @@
 
                 <footer>
                     <p>12 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -139,8 +144,9 @@
 
                 <footer>
                     <p>19 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -154,8 +160,9 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -171,8 +178,10 @@
 
                 <footer>
                     <p>44 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
+
 
                 </footer>
 
@@ -188,8 +197,9 @@
                 <footer>
 
                     <p>54 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
