--- a/profiel.html
+++ b/profiel.html
@@ -46,7 +46,7 @@
             </form>
         </nav>
     </header>
-    <img src="Assets/grandma2.png">
+    <img src="Assets/bookheader.jpg">
     <main>
         <h1>Eigen verhalen lijst</h1>
 
@@ -58,9 +58,11 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticonred.png" alt="hearticon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/download.png" alt="doneicon">
 
-                    <img class="add" src="Assets/download.png" alt="downloadicon">
+
 
                 </footer>
 
@@ -74,8 +76,9 @@
 
                 <footer>
                     <p>44 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img class="add" src="Assets/download.png" alt="downloadicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/download.png" alt="doneicon">
 
                 </footer>
 
@@ -88,15 +91,19 @@
 
                 <footer>
                     <p>12 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img class="add" src="Assets/download.png" alt="downloadicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/download.png" alt="doneicon">
+
 
                 </footer>
 
                 <a href="artikelblind.html" id="leesverder">Lees verder ></a>
 
             </article>
+        </section>
     </main>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
