--- a/vrienden.html
+++ b/vrienden.html
@@ -90,10 +90,9 @@
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-
-                    <img class="add" src="Assets/plusicon.png" alt="addicon">
-
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -108,8 +107,9 @@
 
                 <footer>
                     <p id="gevonden">11 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="add" src="Assets/plusicon.png" alt="addicon">
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
