--- a/suggesties.html
+++ b/suggesties.html
@@ -28,10 +28,10 @@
                 </li>
 
                 <li>
+
                     <label for="searching"> <img id="search" src="Assets/searchicon.png" alt="searchbutton">
                     </label>
                 </li>
-
 
             </ul>
 
@@ -77,6 +77,7 @@
             <li><a href="">Minste aantal woorden</a></li>
 
         </ul>
+
         <section>
             <article>
                 <h2>Verrassing</h2>
@@ -85,10 +86,9 @@
 
                 <footer>
                     <p>11 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-
-                    <img class="add" src="Assets/plusicon.png" alt="addicon">
-
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -101,10 +101,9 @@
 
                 <footer>
                     <p>54 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-
-                    <img class="add" src="Assets/plusicon.png" alt="addicon">
-
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -117,10 +116,9 @@
 
                 <footer>
                     <p>19 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-
-                    <img class="add" src="Assets/plusicon.png" alt="addicon">
-
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
@@ -133,10 +131,9 @@
 
                 <footer>
                     <p>2 keer leuk gevonden</p>
-                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
-
-                    <img class="add" src="Assets/plusicon.png" alt="addicon">
-
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
