new img headers

--- a/vrienden.html
+++ b/vrienden.html
@@ -46,7 +46,7 @@
             </form>
         </nav>
     </header>
-    <img src="Assets/grandma2.png">
+    <img src="Assets/couple.jpg">
     <main>
 
         <nav>
