--- a/suggesties.html
+++ b/suggesties.html
@@ -45,7 +45,7 @@
             </form>
         </nav>
     </header>
-    <img src="Assets/grandma2.png">
+    <img src="Assets/reading-on-train-platform.jpg">
     <main>
 
         <nav>
@@ -79,70 +79,72 @@
         </ul>
 
         <section>
-            <article>
-                <h2>Verrassing</h2>
-                <p>- ‘Biertje dan maar?’ – ‘Graag.’ – ‘Vermoeiende dag?’ – ‘Nah. Naar de bilbiotheek geweest. Met de bus.’ – ‘Gaat daar een bus naartoe?’ – ‘De bus stopt op het stationsplein.’ – ‘Ah. En vandaar moet je lopen?’ – ‘Ja, ik was met mijn zoon. Die sliep in zijn kinderwagen.’ – ‘Goed zo. Lekker wandelweer?’</p>
+
+            <section>
+                <article>
+                    <h2>Verrassing</h2>
+                    <p>- ‘Biertje dan maar?’ – ‘Graag.’ – ‘Vermoeiende dag?’ – ‘Nah. Naar de bilbiotheek geweest. Met de bus.’ – ‘Gaat daar een bus naartoe?’ – ‘De bus stopt op het stationsplein.’ – ‘Ah. En vandaar moet je lopen?’ – ‘Ja, ik was met mijn zoon. Die sliep in zijn kinderwagen.’ – ‘Goed zo. Lekker wandelweer?’</p>
 
 
-                <footer>
-                    <p>11 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <footer>
+                        <p>11 keer leuk gevonden</p>
+                        <img id="hartjeNiet " src="Assets/hearticon.png " alt="hearticon ">
+                        <img id="hartjeRood " src="Assets/hearticonred.png " alt="hearticon ">
+                        <img src="Assets/plusicon.png " alt="addicon ">
 
-                </footer>
+                    </footer>
 
-                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+                    <a href="artikelalzheimer.html " id="leesverder ">Lees verder ></a>
 
-            </article>
-            <article>
-                <h2>Beroemd</h2>
-                <p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug. ‘Mijn vrouw is een groot fan van u’, roept hij. ‘Doe haar de groeten’, zeg ik en stap uit. Centraal Station. Ik duw mijn zoon voort. Hij slaapt. Zich onbewust van de last die er...</p>
+                </article>
+                <article>
+                    <h2>Beroemd</h2>
+                    <p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug. ‘Mijn vrouw is een groot fan van u’, roept hij. ‘Doe haar de groeten’, zeg ik en stap uit. Centraal Station. Ik duw mijn zoon voort. Hij slaapt. Zich onbewust van de last die er...</p>
 
-                <footer>
-                    <p>54 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <footer>
+                        <p>54 keer leuk gevonden</p>
+                        <img id="hartjeNiet " src="Assets/hearticon.png " alt="hearticon ">
+                        <img id="hartjeRood " src="Assets/hearticonred.png " alt="hearticon ">
+                        <img src="Assets/plusicon.png " alt="addicon ">
 
-                </footer>
+                    </footer>
 
-                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+                    <a href="artikelalzheimer.html " id="leesverder ">Lees verder ></a>
 
-            </article>
-            <article>
-                <h2>Steenkolenfrans</h2>
-                <p>Le premier fevrièr 2011. Presque midi. Le bus s’arrête. Ligne 21. Place de Gare Centrale. Je marche au derrière d’un poussette. Mon fils dort. Je suis en route au Bibliothèque Public pour emprunteur Exercices de Style de Raymond Queneau. C’est un livre très dificile d’acquérir. Mais zut alors, quelle ravage ici! Il y a beaucoup</p>
+                </article>
+                <article>
+                    <h2>Steenkolenfrans</h2>
+                    <p>Le premier fevrièr 2011. Presque midi. Le bus s’arrête. Ligne 21. Place de Gare Centrale. Je marche au derrière d’un poussette. Mon fils dort. Je suis en route au Bibliothèque Public pour emprunteur Exercices de Style de Raymond Queneau. C’est un livre très dificile d’acquérir. Mais zut alors, quelle ravage ici! Il y a beaucoup</p>
 
-                <footer>
-                    <p>19 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <footer>
+                        <p>19 keer leuk gevonden</p>
+                        <img id="hartjeNiet " src="Assets/hearticon.png " alt="hearticon ">
+                        <img id="hartjeRood " src="Assets/hearticonred.png " alt="hearticon ">
+                        <img src="Assets/plusicon.png " alt="addicon ">
 
-                </footer>
+                    </footer>
 
-                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+                    <a href="artikelalzheimer.html " id="leesverder ">Lees verder ></a>
 
-            </article>
-            <article>
-                <h2>Het gebrek</h2>
-                <p>De bus uit. Mijn zoon tukt in zijn kinderkoets. Eindelijk. Ik loop over het plein. Een gierende wind en een striemende miezerregen geselen mijn gezicht. De mensen kijken voor zich uit, ieder voor zich. Ik ben op weg richting de bibliotheek om Stijloefeningen te lenen van hoe heet die schijver, iets met een Q. Welk ...</p>
+                </article>
+                <article>
+                    <h2>Het gebrek</h2>
+                    <p>De bus uit. Mijn zoon tukt in zijn kinderkoets. Eindelijk. Ik loop over het plein. Een gierende wind en een striemende miezerregen geselen mijn gezicht. De mensen kijken voor zich uit, ieder voor zich. Ik ben op weg richting de bibliotheek om Stijloefeningen te lenen van hoe heet die schijver, iets met een Q. Welk ...</p>
 
-                <footer>
-                    <p>2 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
+                    <footer>
+                        <p>2 keer leuk gevonden</p>
+                        <img id="hartjeNiet " src="Assets/hearticon.png " alt="hearticon ">
+                        <img id="hartjeRood " src="Assets/hearticonred.png " alt="hearticon ">
+                        <img src="Assets/plusicon.png " alt="addicon ">
 
-                </footer>
+                    </footer>
 
-                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+                    <a href="artikelalzheimer.html " id="leesverder ">Lees verder ></a>
 
-            </article>
-        </section>
+                </article>
+            </section>
     </main>
-    <script src="js/index.js"></script>
+    <script src="js/index.js "></script>
 </body>
 
 </html>
