--- a/vrienden.html
+++ b/vrienden.html
@@ -47,6 +47,7 @@
         </nav>
     </header>
     <img src="Assets/couple.jpg">
+    <!-- https://ak5.picdn.net/shutterstock/videos/15194263/thumb/1.jpg -->
     <main>
 
         <nav>
@@ -78,7 +79,7 @@
             <li><a href="">Minste aantal woorden</a></li>
 
         </ul>
-
+        <h1>Mijn vrienden</h1>
         <section>
 
 
