--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </nav>
     </header>
     <img src="Assets/grandma2.png">
+    <!-- http://i.imgur.com/F3Gc8Nr.jpg -->
     <main>
 
         <nav>
@@ -66,7 +67,6 @@
             </ul>
         </nav>
 
-
         <a href="#submenu">Sorteren ></a>
 
         <ul id="submenu">
@@ -77,8 +77,9 @@
             <li><a href="">Minste aantal woorden</a></li>
 
         </ul>
-
+        <h1>Willekeurige verhalen</h1>
         <section>
+
             <article>
                 <h2>Alzheimer</h2>
                 <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
