--- a/vrienden.html
+++ b/vrienden.html
@@ -90,7 +90,7 @@
 
 
                 <footer>
-                    <p>23 keer leuk gevonden</p>
+                    <p id="gevonden">23 keer leuk gevonden</p>
                     <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
                     <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
                     <img src="Assets/plusicon.png" alt="addicon">
@@ -120,6 +120,7 @@
         </section>
     </main>
     <script src="js/index.js"></script>
+    <script src="js/vrienden.js"></script>
 </body>
 
 </html>
