--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
             </form>
         </nav>
     </header>
-    <img src="Assets/grandma2.png">
-    <!-- http://i.imgur.com/F3Gc8Nr.jpg -->
-    <main>
 
+    <main>
+        <img id="under" src="Assets/grandma.jpg">
         <nav>
             <ul id="onze suggesties">
                 <li>
@@ -67,6 +66,7 @@
             </ul>
         </nav>
 
+
         <a href="#submenu">Sorteren ></a>
 
         <ul id="submenu">
@@ -78,23 +78,9 @@
 
         </ul>
         <h1>Willekeurige verhalen</h1>
+        <a id="ws1" href="artikelalzheimer.html"><img id="ws" src="Assets/ws2.png"></a>
+        <h2 id="meer">Meer verhalen...</h2>
         <section>
-            <article>
-                <h2>Alzheimer</h2>
-                <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
-
-
-                <footer>
-                    <p>23 keer leuk gevonden</p>
-                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
-                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
-                    <img src="Assets/plusicon.png" alt="addicon">
-
-                </footer>
-
-                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
-
-            </article>
             <article>
                 <h2>Vergezocht</h2>
                 <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
@@ -111,6 +97,23 @@
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
 
             </article>
+            <article>
+                <h2>Alzheimer</h2>
+                <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
+
+
+                <footer>
+                    <p>23 keer leuk gevonden</p>
+                    <img id="hartjeNiet" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="hartjeRood" src="Assets/hearticonred.png" alt="hearticon">
+                    <img src="Assets/plusicon.png" alt="addicon">
+
+                </footer>
+
+                <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
+            </article>
+
             <article>
                 <h2>Blind</h2>
                 <p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk: ‘Centraal Station, eindhalte’. Het sissende geluid van busdeuren die open gaan. Mensen drommen naar buiten. Voorzichtig vind ik mijn weg naar de uitgang en stap uit.</p>
